# nolint

./: .clang-format  .clang-tidy  ARCHITECTURE.md  CMakeLists.txt  DECISIONS.md  DECISIONS2.md  PLAN.md  README.md  REQUIREMENTS.md  TECHNICAL_DETAILS.md
dev-log/: DEVELOPMENT_LOG.md  IMPLEMENTATION_JOURNEY.md
include/: annotated_file.hpp  file_context.hpp  file_io.hpp  file_modifier.hpp  functional_core.hpp  nolint_app.hpp  nolint_types.hpp  terminal_io.hpp  ui_model.hpp  warning_parser.hpp
include/nolint/: context_builder.hpp  file_manager.hpp  interfaces.hpp  nolint_processor.hpp  simple_ui.hpp  string_utils.hpp  types.hpp  warning_parser.hpp
include/nolint/application/: nolint_app.hpp
include/nolint/core/: annotated_file.hpp  functional_core.hpp  warning.hpp
include/nolint/io/: file_system.hpp
include/nolint/parsers/: warning_parser.hpp
include/nolint/ui/: ftxui_terminal.hpp  terminal.hpp  ui_model.hpp
src/: annotated_file.cpp  context_builder.cpp  file_context.cpp  file_manager.cpp  file_modifier.cpp  functional_core.cpp  main.cpp  nolint_app.cpp  nolint_processor.cpp  simple_ui.cpp  string_utils.cpp  terminal_io.cpp  ui_model.cpp  warning_parser.cpp
src/application/: nolint_app.cpp
src/core/: annotated_file.cpp  functional_core.cpp  warning.cpp
src/io/: file_system.cpp
src/parsers/: warning_parser.cpp
src/ui/: ftxui_terminal.cpp  terminal.cpp  ui_model.cpp  ui_model_persistence.cpp
tests/: CMakeLists.txt  functional_core_test.cpp  nolint_app_test.cpp  real_output_test.cpp  test_annotated_file.cpp  test_config.hpp.in  test_file_context.cpp  test_file_manager.cpp  test_ui_model.cpp  test_warning_parser.cpp  ui_integration_test.cpp  warning_parser_test.cpp
tests/application/: test_batch_mode.cpp
tests/core/: test_annotated_file.cpp  test_functional_core.cpp  test_warning.cpp
tests/data/: sample_tidy_output.txt
tests/integration/: test_integration.cpp
tests/parsers/: test_warning_parser.cpp
tests/ui/: test_ui_model.cpp  test_ui_model_persistence.cpp
